--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
@@ -171,6 +171,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClCompile Include="..\Classes\cpg_Random.cpp" />
     <ClCompile Include="..\Classes\cpg_Setting.cpp" />
     <ClCompile Include="..\Classes\cpg_SoundAction.cpp" />
+    <ClCompile Include="..\Classes\cpg_SpriteFrameAction.cpp" />
     <ClCompile Include="..\Classes\cpg_StringTable.cpp" />
     <ClCompile Include="..\Classes\cpg_TileSheetConfiguration.cpp" />
     <ClCompile Include="..\Classes\graph_practice_CosineScene.cpp" />
@@ -431,6 +432,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClInclude Include="..\Classes\cpg_Random.h" />
     <ClInclude Include="..\Classes\cpg_Setting.h" />
     <ClInclude Include="..\Classes\cpg_SoundAction.h" />
+    <ClInclude Include="..\Classes\cpg_SpriteFrameAction.h" />
     <ClInclude Include="..\Classes\cpg_StringTable.h" />
     <ClInclude Include="..\Classes\cpg_TileSheetConfiguration.h" />
     <ClInclude Include="..\Classes\graph_practice_CosineScene.h" />
