--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
@@ -714,9 +714,6 @@
     <ClCompile Include="..\Classes\cpgui_research_layout_ToolBarNodeScene.cpp">
       <Filter>src\scene\ui_research</Filter>
     </ClCompile>
-    <ClCompile Include="..\Classes\cpgui_ToolBarNode.cpp">
-      <Filter>src\cpgui</Filter>
-    </ClCompile>
     <ClCompile Include="..\Classes\cpgui_research_button_OnMouseOverScene.cpp">
       <Filter>src\scene\ui_research</Filter>
     </ClCompile>
@@ -992,6 +989,9 @@
     </ClCompile>
     <ClCompile Include="..\Classes\cpg_node_PivotNode.cpp">
       <Filter>src\cpg_node</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Classes\cpg_ui_ToolBarNode.cpp">
+      <Filter>src\cpgui</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -1520,9 +1520,6 @@
     <ClInclude Include="..\Classes\cpgui_research_layout_ToolBarNodeScene.h">
       <Filter>src\scene\ui_research</Filter>
     </ClInclude>
-    <ClInclude Include="..\Classes\cpgui_ToolBarNode.h">
-      <Filter>src\cpgui</Filter>
-    </ClInclude>
     <ClInclude Include="..\Classes\cpgui_research_button_OnMouseOverScene.h">
       <Filter>src\scene\ui_research</Filter>
     </ClInclude>
@@ -1804,6 +1801,9 @@
     </ClInclude>
     <ClInclude Include="..\Classes\cpg_node_PivotNode.h">
       <Filter>src\cpg_node</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\cpg_ui_ToolBarNode.h">
+      <Filter>src\cpgui</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
