--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
@@ -76,9 +76,6 @@
     <Filter Include="src\scene\step99\fsm1test">
       <UniqueIdentifier>{1a9c12b1-3aa3-4477-9148-d15770dbbcfa}</UniqueIdentifier>
     </Filter>
-    <Filter Include="src\cpgui">
-      <UniqueIdentifier>{426843c1-8679-4018-9029-295647a2bc02}</UniqueIdentifier>
-    </Filter>
     <Filter Include="src\scene\step_03_clickclick">
       <UniqueIdentifier>{f0a8247b-c79a-4550-845d-19e0c375ca24}</UniqueIdentifier>
     </Filter>
@@ -219,6 +216,9 @@
     </Filter>
     <Filter Include="src\cpg_node">
       <UniqueIdentifier>{4cae144a-375b-4e3d-839c-094979b51ad5}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="src\cpg_ui">
+      <UniqueIdentifier>{426843c1-8679-4018-9029-295647a2bc02}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -988,10 +988,10 @@
       <Filter>src\cpg_node</Filter>
     </ClCompile>
     <ClCompile Include="..\Classes\cpg_ui_ToolBarNode.cpp">
-      <Filter>src\cpgui</Filter>
+      <Filter>src\cpg_ui</Filter>
     </ClCompile>
     <ClCompile Include="..\Classes\cpg_ui_ScrollViewGenerator.cpp">
-      <Filter>src\cpgui</Filter>
+      <Filter>src\cpg_ui</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -1800,10 +1800,10 @@
       <Filter>src\cpg_node</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\cpg_ui_ToolBarNode.h">
-      <Filter>src\cpgui</Filter>
+      <Filter>src\cpg_ui</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\cpg_ui_ScrollViewGenerator.h">
-      <Filter>src\cpgui</Filter>
+      <Filter>src\cpg_ui</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
