--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
@@ -996,6 +996,9 @@
     <ClCompile Include="..\Classes\ui_research_button_research_OnMouseOverScene.cpp">
       <Filter>src\scene\ui_research\button</Filter>
     </ClCompile>
+    <ClCompile Include="..\Classes\ui_research_button_research_EXButtonScene.cpp">
+      <Filter>src\scene\ui_research\button</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -1806,6 +1809,9 @@
       <Filter>src\scene\ui_research\button</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\ui_research_button_research_OnMouseOverScene.h">
+      <Filter>src\scene\ui_research\button</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\ui_research_button_research_EXButtonScene.h">
       <Filter>src\scene\ui_research\button</Filter>
     </ClInclude>
   </ItemGroup>
