add scene : TeamFightManagerChampionSelectButtonScene

--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
@@ -1002,6 +1002,9 @@
     <ClCompile Include="..\Classes\cpg_ui_EXButtonNode.cpp">
       <Filter>src\cpg_ui</Filter>
     </ClCompile>
+    <ClCompile Include="..\Classes\ui_research_button_research_TeamFightManagerChampionSelectButtonScene.cpp">
+      <Filter>src\scene\ui_research\button</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -1819,6 +1822,9 @@
     </ClInclude>
     <ClInclude Include="..\Classes\cpg_ui_EXButtonNode.h">
       <Filter>src\cpg_ui</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\ui_research_button_research_TeamFightManagerChampionSelectButtonScene.h">
+      <Filter>src\scene\ui_research\button</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
