--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
@@ -1008,6 +1008,9 @@
     <ClCompile Include="..\Classes\ui_research_button_research_RootScene.cpp">
       <Filter>src\scene\ui_research\button</Filter>
     </ClCompile>
+    <ClCompile Include="..\Classes\ui_research_button_research_TeamFightManagerChampionSelectButtonStepScene.cpp">
+      <Filter>src\scene\ui_research\button</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -1830,6 +1833,9 @@
       <Filter>src\scene\ui_research\button</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\ui_research_button_research_RootScene.h">
+      <Filter>src\scene\ui_research\button</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\ui_research_button_research_TeamFightManagerChampionSelectButtonStepScene.h">
       <Filter>src\scene\ui_research\button</Filter>
     </ClInclude>
   </ItemGroup>
