--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
@@ -405,6 +405,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClCompile Include="..\Classes\ui_research_button_research_RootScene.cpp" />
     <ClCompile Include="..\Classes\ui_research_button_research_TeamFightManagerChampionSelectButtonScene.cpp" />
     <ClCompile Include="..\Classes\ui_research_button_research_TeamFightManagerChampionSelectButtonStepScene.cpp" />
+    <ClCompile Include="..\Classes\ui_research_button_research_team_fight_manager_OnMouseOverNode.cpp" />
     <ClCompile Include="..\Classes\ui_research_RootScene.cpp" />
     <ClCompile Include="..\Classes\ui_research_text_field_BMFontScene.cpp" />
     <ClCompile Include="..\Classes\ui_research_type_effect_BasicScene.cpp" />
@@ -682,6 +683,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClInclude Include="..\Classes\ui_research_button_research_RootScene.h" />
     <ClInclude Include="..\Classes\ui_research_button_research_TeamFightManagerChampionSelectButtonScene.h" />
     <ClInclude Include="..\Classes\ui_research_button_research_TeamFightManagerChampionSelectButtonStepScene.h" />
+    <ClInclude Include="..\Classes\ui_research_button_research_team_fight_manager_OnMouseOverNode.h" />
     <ClInclude Include="..\Classes\ui_research_RootScene.h" />
     <ClInclude Include="..\Classes\ui_research_text_field_BMFontScene.h" />
     <ClInclude Include="..\Classes\ui_research_type_effect_BasicScene.h" />
