--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
@@ -258,9 +258,6 @@
     <ClCompile Include="..\Classes\EntryScene.cpp">
       <Filter>src\scene</Filter>
     </ClCompile>
-    <ClCompile Include="..\Classes\CPG_InputTest_KeyViewer.cpp">
-      <Filter>src\input</Filter>
-    </ClCompile>
     <ClCompile Include="..\Classes\CPG_InputTest_KeyMapConfigHelper.cpp">
       <Filter>src\input</Filter>
     </ClCompile>
@@ -1017,6 +1014,9 @@
     <ClCompile Include="..\Classes\ui_research_type_effect_ShakeScene.cpp">
       <Filter>src\scene\ui_research\type_effect</Filter>
     </ClCompile>
+    <ClCompile Include="..\Classes\cpg_input_KeyViewer.cpp">
+      <Filter>src\input</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -1048,9 +1048,6 @@
     </ClInclude>
     <ClInclude Include="..\Classes\EntryScene.h">
       <Filter>src\scene</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Classes\CPG_InputTest_KeyViewer.h">
-      <Filter>src\input</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\CPG_InputTest_KeyMapConfigHelper.h">
       <Filter>src\input</Filter>
@@ -1846,6 +1843,9 @@
     </ClInclude>
     <ClInclude Include="..\Classes\ui_research_type_effect_ShakeScene.h">
       <Filter>src\scene\ui_research\type_effect</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\cpg_input_KeyViewer.h">
+      <Filter>src\input</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
