--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
@@ -163,6 +163,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClCompile Include="..\Classes\AppDelegate.cpp" />
     <ClCompile Include="..\Classes\cocos_research_action_SoundActionScene.cpp" />
     <ClCompile Include="..\Classes\cocos_research_action_SpriteFrameActionScene.cpp" />
+    <ClCompile Include="..\Classes\cpg_input_KeyCodeNames.cpp" />
     <ClCompile Include="..\Classes\cpg_node_PivotNode.cpp" />
     <ClCompile Include="..\Classes\cpgui_research_layout_ToolBarNodeScene.cpp" />
     <ClCompile Include="..\Classes\cpg_ui_EXButtonNode.cpp" />
@@ -312,7 +313,6 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClCompile Include="..\Classes\step_rain_of_chaos_game_test_SpawnProcessorScene.cpp" />
     <ClCompile Include="..\Classes\step_rain_of_chaos_game_test_StageNodeScene.cpp" />
     <ClCompile Include="..\Classes\step_rain_of_chaos_input_KeyCodeCollector.cpp" />
-    <ClCompile Include="..\Classes\CPG_Input_KeyCodeNames.cpp" />
     <ClCompile Include="..\Classes\cpg_input_KeyMapConfigHelper.cpp" />
     <ClCompile Include="..\Classes\cpg_animation_InfoContainer.cpp" />
     <ClCompile Include="..\Classes\EntryScene.cpp" />
@@ -428,6 +428,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClInclude Include="..\Classes\AppDelegate.h" />
     <ClInclude Include="..\Classes\cocos_research_action_SoundActionScene.h" />
     <ClInclude Include="..\Classes\cocos_research_action_SpriteFrameActionScene.h" />
+    <ClInclude Include="..\Classes\cpg_input_KeyCodeNames.h" />
     <ClInclude Include="..\Classes\cpg_node_PivotNode.h" />
     <ClInclude Include="..\Classes\cpgui_research_layout_ToolBarNodeScene.h" />
     <ClInclude Include="..\Classes\cpg_ui_EXButtonNode.h" />
@@ -588,7 +589,6 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClInclude Include="..\Classes\step_rain_of_chaos_game_test_StageNodeScene.h" />
     <ClInclude Include="..\Classes\step_rain_of_chaos_input_KeyCodeCollector.h" />
     <ClInclude Include="..\Classes\step_rain_of_chaos_input_KeyCodeContainer.h" />
-    <ClInclude Include="..\Classes\CPG_Input_KeyCodeNames.h" />
     <ClInclude Include="..\Classes\cpg_input_KeyMapConfigHelper.h" />
     <ClInclude Include="..\Classes\cpg_animation_InfoContainer.h" />
     <ClInclude Include="..\Classes\EntryScene.h" />
