--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
@@ -1029,6 +1029,9 @@
     <ClCompile Include="..\Classes\algorithm_practice_loophero_RootScene.cpp">
       <Filter>src\scene\algorithm_practice\loophero</Filter>
     </ClCompile>
+    <ClCompile Include="..\Classes\algorithm_practice_loophero_SquareScene.cpp">
+      <Filter>src\scene\algorithm_practice\loophero</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -1863,6 +1866,9 @@
       <Filter>src\scene\algorithm_practice\astar</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\algorithm_practice_loophero_RootScene.h">
+      <Filter>src\scene\algorithm_practice\loophero</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\algorithm_practice_loophero_SquareScene.h">
       <Filter>src\scene\algorithm_practice\loophero</Filter>
     </ClInclude>
   </ItemGroup>
