--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
@@ -1035,6 +1035,9 @@
     <ClCompile Include="..\Classes\algorithm_practice_loophero_PivotScene.cpp">
       <Filter>src\scene\algorithm_practice\loophero</Filter>
     </ClCompile>
+    <ClCompile Include="..\Classes\algorithm_practice_loophero_SquareBuilder.cpp">
+      <Filter>src\scene\algorithm_practice\loophero</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -1878,6 +1881,9 @@
       <Filter>src\scene\algorithm_practice\loophero</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\algorithm_practice_loophero_PivotScene.h">
+      <Filter>src\scene\algorithm_practice\loophero</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\algorithm_practice_loophero_SquareBuilder.h">
       <Filter>src\scene\algorithm_practice\loophero</Filter>
     </ClInclude>
   </ItemGroup>
