--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
@@ -162,6 +162,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClCompile Include="..\Classes\algorithm_practice_floodfill_TestScene.cpp" />
     <ClCompile Include="..\Classes\algorithm_practice_loophero_PivotScene.cpp" />
     <ClCompile Include="..\Classes\algorithm_practice_loophero_RootScene.cpp" />
+    <ClCompile Include="..\Classes\algorithm_practice_loophero_SquareBuilder.cpp" />
     <ClCompile Include="..\Classes\algorithm_practice_loophero_SquareScene.cpp" />
     <ClCompile Include="..\Classes\algorithm_practice_RootScene.cpp" />
     <ClCompile Include="..\Classes\AppDelegate.cpp" />
@@ -432,6 +433,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClInclude Include="..\Classes\algorithm_practice_loophero_Constant.h" />
     <ClInclude Include="..\Classes\algorithm_practice_loophero_PivotScene.h" />
     <ClInclude Include="..\Classes\algorithm_practice_loophero_RootScene.h" />
+    <ClInclude Include="..\Classes\algorithm_practice_loophero_SquareBuilder.h" />
     <ClInclude Include="..\Classes\algorithm_practice_loophero_SquareScene.h" />
     <ClInclude Include="..\Classes\algorithm_practice_RootScene.h" />
     <ClInclude Include="..\Classes\AppDelegate.h" />
