--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
@@ -164,6 +164,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClCompile Include="..\Classes\algorithm_practice_loophero_RootScene.cpp" />
     <ClCompile Include="..\Classes\algorithm_practice_loophero_SquareBuilder.cpp" />
     <ClCompile Include="..\Classes\algorithm_practice_loophero_SquareScene.cpp" />
+    <ClCompile Include="..\Classes\algorithm_practice_loophero_TrimScene.cpp" />
     <ClCompile Include="..\Classes\algorithm_practice_RootScene.cpp" />
     <ClCompile Include="..\Classes\AppDelegate.cpp" />
     <ClCompile Include="..\Classes\cocos_research_action_SoundActionScene.cpp" />
@@ -435,6 +436,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClInclude Include="..\Classes\algorithm_practice_loophero_RootScene.h" />
     <ClInclude Include="..\Classes\algorithm_practice_loophero_SquareBuilder.h" />
     <ClInclude Include="..\Classes\algorithm_practice_loophero_SquareScene.h" />
+    <ClInclude Include="..\Classes\algorithm_practice_loophero_TrimScene.h" />
     <ClInclude Include="..\Classes\algorithm_practice_RootScene.h" />
     <ClInclude Include="..\Classes\AppDelegate.h" />
     <ClInclude Include="..\Classes\cocos_research_action_SoundActionScene.h" />
