--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
@@ -1050,6 +1050,9 @@
     <ClCompile Include="..\Classes\ui_research_gauge_research_RootScene.cpp">
       <Filter>src\scene\ui_research\gauge</Filter>
     </ClCompile>
+    <ClCompile Include="..\Classes\ui_research_gauge_research_BasicScene.cpp">
+      <Filter>src\scene\ui_research\gauge</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -1905,6 +1908,9 @@
       <Filter>src\cpg</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\ui_research_gauge_research_RootScene.h">
+      <Filter>src\scene\ui_research\gauge</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\ui_research_gauge_research_BasicScene.h">
       <Filter>src\scene\ui_research\gauge</Filter>
     </ClInclude>
   </ItemGroup>
