add scene : ui_research - gauge_research - AnimationScene

--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
@@ -1053,6 +1053,9 @@
     <ClCompile Include="..\Classes\ui_research_gauge_research_BasicScene.cpp">
       <Filter>src\scene\ui_research\gauge</Filter>
     </ClCompile>
+    <ClCompile Include="..\Classes\ui_research_gauge_research_AnimationScene.cpp">
+      <Filter>src\scene\ui_research\gauge</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -1911,6 +1914,9 @@
       <Filter>src\scene\ui_research\gauge</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\ui_research_gauge_research_BasicScene.h">
+      <Filter>src\scene\ui_research\gauge</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\ui_research_gauge_research_AnimationScene.h">
       <Filter>src\scene\ui_research\gauge</Filter>
     </ClInclude>
   </ItemGroup>
