--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
@@ -416,6 +416,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClCompile Include="..\Classes\ui_research_gauge_research_AnimationScene.cpp" />
     <ClCompile Include="..\Classes\ui_research_gauge_research_BasicScene.cpp" />
     <ClCompile Include="..\Classes\ui_research_gauge_research_RootScene.cpp" />
+    <ClCompile Include="..\Classes\ui_research_gauge_research_SpriteScene.cpp" />
     <ClCompile Include="..\Classes\ui_research_RootScene.cpp" />
     <ClCompile Include="..\Classes\ui_research_text_field_BMFontScene.cpp" />
     <ClCompile Include="..\Classes\ui_research_type_effect_BasicScene.cpp" />
@@ -705,6 +706,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClInclude Include="..\Classes\ui_research_gauge_research_AnimationScene.h" />
     <ClInclude Include="..\Classes\ui_research_gauge_research_BasicScene.h" />
     <ClInclude Include="..\Classes\ui_research_gauge_research_RootScene.h" />
+    <ClInclude Include="..\Classes\ui_research_gauge_research_SpriteScene.h" />
     <ClInclude Include="..\Classes\ui_research_RootScene.h" />
     <ClInclude Include="..\Classes\ui_research_text_field_BMFontScene.h" />
     <ClInclude Include="..\Classes\ui_research_type_effect_BasicScene.h" />
